--- a/to_do_app/Dockerfile
+++ b/to_do_app/Dockerfile
@@ -3,11 +3,13 @@ FROM python:3.10
 ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
 
-# Рабочая директория внутри контейнера
+COPY wait-for-it.sh /wait-for-it.sh
+RUN chmod +x /wait-for-it.sh
+
+RUN apt-get update && apt-get install -y --no-install-recommends netcat-openbsd
+
 WORKDIR /code
 
-# Копируем файлы проекта
-COPY . /code/
-
-# Устанавливаем зависимости
+COPY requirements.txt /code/
 RUN pip install --no-cache-dir -r requirements.txt
+COPY . /code/
